css/main.css
@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=latin-ext');
@import url('https://fonts.googleapis.com/css?family=Lobster&subset=latin-ext');
/* Mobile first */

/*========================================================================
                            Global styles
==========================================================================*/
body {
    font-family: 'Roboto', sans-serif;
    font-size: 12px;
    font-weight: 300;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;    
}

body, header, main, footer {
    padding: 0 !important;
    margin: 0 !important;
}

a {
    text-decoration: none;
}

.lobster {
    font-family: 'Lobster', cursive;
    color: #e5e5e5;
}

main {
    min-height: calc(100vh - 200px);
}

h1 {
    font-size: 40px;
}

h4, .h4 {
    font-size: 18px;
    font-weight: 300;
    text-transform: uppercase;
}

h5, .h5 {
    text-align: center;
    font-weight: 300;
    color: #939598;
    text-transform: uppercase;
    font-size: 14px;
}

p {
    font-size: 13px;
    font-weight: 300;
    line-height: 30px;
}

p.init-line-height {
    line-height: initial;
}

a {
    color: #939598;
}

a:hover {
    text-decoration: none;
    color: #FFCB08;
}

a:focus {
    text-decoration: none;
    color: #FFCB08;
}

small {
    color: #000;
    font-size: 10px;
}

button {
    cursor: pointer;
}

button:focus, input:focus {
    outline-offset: 0;
    outline: none;
}

.table th, .table td {
    border: none;
}

.tooltip {
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #191818;
    color: #FFCB08;
    padding: 10px;
    text-align: center;
    font-weight: bold;
    font-size: 15px;
}


/*========================================================================
                            Custom Grid Layout
==========================================================================*/

.flex-center, .flex-center-res {
    display: flex;
    justify-content: center;
    align-items: center;
}

.flex-space-around, .flex-space-around-res {
    display: flex;
    justify-content: space-around;
}

.font-25 { font-size: 25px; }
.font-15 { font-size: 15px; }
.font-16 { font-size: 16px; }

.p-10 { padding: 10px; }
.p-20 { padding: 20px; }
.p-lr-20 { padding: 0 20px; }
.p-tb-20 { padding: 20px 0; }
.p-t-20 { padding-top: 20px; }
.p-b-20 { padding-bottom: 20px; }

.m-b-20 { margin-bottom: 20px; }

.abs-lt {
    position: absolute;
    top: 10px;
    left: 10px;
}

.text-center { text-align: center; }

.content-wrapper {
    max-width: 1140px;
    margin: 0 auto;
    padding: 0 30px;
}

@media screen and (max-width: 767px) {
    .md-order-1 { order: 1; }
    .md-order-2 { order: 2; }
    .md-order-3 { order: 3; }

    .flex-center-res,
    .flex-space-around-res { flex-flow: column; }

    .md-p-10 { padding: 10px; }
    .md-abs-lt {
        position: absolute;
        top: 10px;
        left: 10px;
    }

    .content-wrapper {
        /*padding: 0 20px;*/
    }
}

/* Shop specific */

.shop-info-section li {
    min-height: 19px;
}

.shop-info-section .flex-space-around-res div {
    flex: 0 0 33%;
}

.articles-row {
    display: flex;
    flex-wrap: wrap;
}

.articles-row div.store-item-wrapper {
    flex: 0 0 25%;
}

main.cart .cart-content div >div {
    width: calc(100% - 20px);
}

#article-photo-modal .cpm-bg {
    min-width: 520px;
}

#article-photo-modal .cpm-bg img {
    max-width: 100%;
}

#article-photo-modal .cpm-bg-fff {
    min-width: 300px;
}

@media screen and (max-width: 867px) and (min-width: 768px) {
    #article-photo-modal .cpm-bg-fff { min-width: auto; }
}

@media screen and (max-width: 767px) {
    .articles-row div.store-item-wrapper {
        flex: 0 0 33.333333%;
    }

    .shop-info-section .flex-space-around-res div {
        flex: 0 0 100%;
        padding: 10px;
    }

    #article-photo-modal .cpm-bg {
        min-width: 100%;
    }

    #article-photo-modal .container {
        width: 100vw;
        min-height: 100vh;
        overflow-x: hidden;
    }

    #article-photo-modal .top-right i {
        font-size: 30px;
    }
}

@media screen and (max-width: 575px) {
    .articles-row div.store-item-wrapper {
        flex: 0 0 50%;
    }
}

/* Shop specific end */

/*========================================================================
                            Layout
==========================================================================*/
.main-header {
    background-color: rgba(0, 0, 0, 0.85);
}

/*** BUTTONS ***/

.btn-yellow, .btn-white, .btn-dark {
    display: inline-block;
    width: 182px;
    height: 40px;
    line-height: 40px;
    font-weight: 700;
    margin: 10px 0;
    font-size: 14px;
    text-transform: uppercase;
}
 
.btn-yellow {
    color: #000;
    background: #FFCB08;
}

.btn-dark {
    color: #000;
    border: 1px solid #333;
    background: #fff;
    padding-left: 10px;
}

.btn-dark:hover, .btn-dark:focus, .btn-dark:active {
    color: #FFCB08;
    box-shadow: none;
}

.btn-yellow:hover, .btn-yellow:focus {
    color: #fff;
}

.btn-white {
    border: 1px solid #fff;
    background-color: transparent;
    color: #fff;
}

.btn-white:hover, .btn-white:focus {
    border: 1px solid #FFCB08;
    background-color: transparent;
    color: #FFCB08;
}

.btn-white:hover i.fa, .btn-white:focus i.fa {
    color: #FFCB08;
}

.btn-add-to-cart-success, .btn-add-to-cart-success:hover {
    color: #aeff00;
    border-color: #aeff00;
}
.btn-add-to-cart-success i.fa, .btn-add-to-cart-success:hover {
    color: #aeff00;
}


/*** ARROWS ***/
.arrow-yellow {
    color: #FFCB08;
    font-size: 16px;
    top: 2px;
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    text-align: right;
}

.sign-in-home {
    position: relative;
    padding-right: 10px;
}
/* ... */

